--- a/index.html
+++ b/index.html
@@ -7,21 +7,15 @@
     <link rel="stylesheet" href="css/start.css">
     <title>スタート</title>
 
+    <header class="header">
+        <h1>JANKEN GAME</h1>
+    </header>
+
 <body>
-
-    <div class="buttons">
-        <button class="blob-btn">
-            <class="start_btn"><a class="button" href="index.html">START</a>
-
-                <main class="start">
-
-                </main>
-    </div>
-
 
     <div class="loader">
         <div class="loader-bg">
-            <span>LOADING</span>
+            <a class="loader span" href="janken.html">START</a>
         </div>
         <div class="drops">
             <div class="drop1"></div>
